--- a/backend/views/profile.ejs
+++ b/backend/views/profile.ejs
@@ -40,6 +40,30 @@
                     <div>
                         <h3 class="text-2xl"><span class="font-light">Hello</span>, <%= user.name %></h3>
                         <p class="text-gray-400 text-sm">@<%= user.username %></p>
+                        <% if (loggedInUser._id.toString() === user._id.toString()) { %>
+                            <form
+                            action="/profile/upload"
+                            method="post"
+                            enctype="multipart/form-data"
+                            class="mb-6"
+                            >
+                                <input
+                                type="file"
+                                name="image"
+                                required
+                                class="text-sm text-gray-400 file:mr-4 file:py-1 file:px-3
+                                        file:rounded-md file:border-0 file:text-sm
+                                        file:bg-zinc-700 file:text-white hover:file:bg-zinc-600"
+                                />
+                                <button
+                                type="submit"
+                                class="ml-2 px-3 py-1 bg-blue-500 hover:bg-blue-600 rounded-md text-sm"
+                                >
+                                Update Profile Picture
+                                </button>
+                            </form>
+                            <% } %>
+
                     </div>
                 </div>
                 
